--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -6,10 +6,8 @@
 @import "~breakpoint-sass";
 
 @import "hds";
-@import "library/variables/*.*";
-@import "library/mixins/*.*";
-@import "library/fonts/*.*";
-@import "base/**/*.*";
+@import "library/_index";
+@import "base/_index";
 @import "components/content/highlighted";
 @import "components/content/quoted";
 @import "components/navigation/link";
