--- a/src/scss/component-library.scss
+++ b/src/scss/component-library.scss
@@ -1,5 +1,5 @@
-@import "library/variables/*.*";
-@import "library/mixins/*.*";
+@import "library/variables/_index";
+@import "library/mixins/_index";
 
 .component-library-wrapper {
   background-color: $color-white;
