--- a/templates/content/tpr-unit.html.twig
+++ b/templates/content/tpr-unit.html.twig
@@ -5,13 +5,17 @@
  */
 #}
 
-{% if drupal_entity('block', 'main_navigation_level_2', check_access=false)|render|striptags|trim is not empty %}
+{% if not block_name %}
+  {% set block_name = 'main_navigation_level_2' %}
+{% endif %}
+
+{% if drupal_entity('block', block_name, check_access=false)|render|striptags|trim is not empty %}
   {% set in_menu =  TRUE %}
 {% endif %}
 
 {% embed '@helfi_tpr/tpr-unit.html.twig' with {in_menu: in_menu} %}
   {% block sidebar_block %}
-    {{ drupal_entity('block', 'main_navigation_level_2', check_access=false) }}
+    {{ drupal_entity('block', block_name, check_access=false) }}
   {% endblock sidebar_block %}
 
   {% block main_content %}
