--- a/src/scss/components/block/_react-and-share.scss
+++ b/src/scss/components/block/_react-and-share.scss
@@ -9,14 +9,10 @@
 }
 
 .rns {
-  margin: 0 auto;
-  max-width: $content-area-wrapper-width-max;
-  padding: 0 $spacing-and-half;
-
-  @include breakpoint($breakpoint-l) {
-    margin: 0 auto;
-    padding: 0 $spacing-double;
-  }
+  @include components-container-max-width();
+  @include component-side-padding();
+  margin-left: auto;
+  margin-right: auto;
 
   .rns-plugin {
     border-bottom: 1px solid $color-black;
