UHF-2697: Fix tpr-unit accordion and services mobile paddings

--- a/templates/content/tpr-unit.html.twig
+++ b/templates/content/tpr-unit.html.twig
@@ -32,6 +32,8 @@
           component_classes: [
             'component--accordion',
             'component--accordion-bg-grey',
+            'component--hardcoded',
+            'component--tpr-unit',
           ],
           component_content_class: 'accordion',
         }
