UHF-2697: Fix unit search pager margin

--- a/src/scss/components/paragraphs/_unit-search.scss
+++ b/src/scss/components/paragraphs/_unit-search.scss
@@ -129,7 +129,7 @@
     display: flex;
     justify-content: center;
     list-style: none;
-    margin: 0;
+    margin: $spacing-double 0 0;
     padding: 0;
 
     @include breakpoint($breakpoint-m) {
