UHF-2697: Remove padding from left on additional information links on errand services since they got some padding from the general ul padding change

--- a/src/scss/components/content/_errand-service.scss
+++ b/src/scss/components/content/_errand-service.scss
@@ -34,6 +34,7 @@
 
   .errand-service__detail-links {
     list-style: none;
+    padding-left: 0;
     padding-top: 0;
 
     .errand-service__detail-link-wrapper {
