UHF-2916: Add missing variables for the html template

--- a/templates/layout/html.html.twig
+++ b/templates/layout/html.html.twig
@@ -38,6 +38,10 @@
                       ~ '--hdbt-color-palette-text--primary: var(--hdbt-color-' ~ theme_color ~ '-text--primary);'
                       ~ '--hdbt-color-palette-text--secondary: var(--hdbt-color-' ~ theme_color ~ '-text--secondary);'
                       ~ '--hdbt-color-palette-text--accent: var(--hdbt-color-' ~ theme_color ~ '-text--accent);'
+                      ~ '--hdbt-color-palette-button--primary: var(--hdbt-color-' ~ theme_color ~ '-button--primary);'
+                      ~ '--hdbt-color-palette-button-contrast--primary: var(--hdbt-color-' ~ theme_color ~ '-button-contrast--primary);'
+                      ~ '--hdbt-color-palette-button--secondary: var(--hdbt-color-' ~ theme_color ~ '-button--secondary);'
+                      ~ '--hdbt-color-palette-button-contrast--secondary: var(--hdbt-color-' ~ theme_color ~ '-contrast--secondary);'
   %}
   <body{{ attributes.setAttribute('style', hdbt_defaults) }}>
     {#
