--- a/templates/layout/html.html.twig
+++ b/templates/layout/html.html.twig
@@ -41,7 +41,7 @@
                       ~ '--hdbt-color-palette-button--primary: var(--hdbt-color-' ~ theme_color ~ '-button--primary);'
                       ~ '--hdbt-color-palette-button-contrast--primary: var(--hdbt-color-' ~ theme_color ~ '-button-contrast--primary);'
                       ~ '--hdbt-color-palette-button--secondary: var(--hdbt-color-' ~ theme_color ~ '-button--secondary);'
-                      ~ '--hdbt-color-palette-button-contrast--secondary: var(--hdbt-color-' ~ theme_color ~ '-contrast--secondary);'
+                      ~ '--hdbt-color-palette-button-contrast--secondary: var(--hdbt-color-' ~ theme_color ~ '-button-contrast--secondary);'
   %}
   <body{{ attributes.setAttribute('style', hdbt_defaults) }}>
     {#
