--- a/templates/views/views-infinite-scroll-pager--service-units.html.twig
+++ b/templates/views/views-infinite-scroll-pager--service-units.html.twig
@@ -9,7 +9,7 @@
   <ul{{ attributes.addClass('service__units__pager') }}>
     <li class="pager__item service__units__pager-button-wrapper">
       <a class="service__units__pager-button button" href="{{ items.next.href }}" rel="next">
-        {% include '@hdbt/button/button.html.twig' with {type: 'secondary', disabled: false, label: options.button_text } %}
+        {{ options.button_text }}
       </a>
     </li>
   </ul>
