UHF-3117: Fix errand-service__detail-link icons on mobile

--- a/src/scss/components/content/_errand-service.scss
+++ b/src/scss/components/content/_errand-service.scss
@@ -53,6 +53,7 @@
         background-size: contain;
         content: "";
         display: flex;
+        flex-shrink: 0;
         height: 24px;
         margin-right: $spacing-half;
         mask-image: url('../icons/hds/ui/globe.svg');
