--- a/src/scss/components/content/_service.scss
+++ b/src/scss/components/content/_service.scss
@@ -250,3 +250,8 @@ $teaser-icon-size-desktop: 48px;
     }
   }
 }
+
+// Add extra margin to service long description if table of contents is enabled.
+.table-of-contents__container + .service__long-desc {
+  @include component-margin-top();
+}
