--- a/templates/content/tpr-service.html.twig
+++ b/templates/content/tpr-service.html.twig
@@ -17,7 +17,15 @@
   {% set sidebar_content = TRUE %}
 {% endif %}
 
-{% embed '@helfi_tpr/tpr-service.html.twig' with {in_menu: in_menu, sidebar_content: sidebar_content} %}
+{% if sidebar_content or in_menu or content.links|render %}
+  {% set has_sidebar = TRUE %}
+{% endif %}
+
+{% embed '@helfi_tpr/tpr-service.html.twig' with {
+  in_menu: in_menu,
+  sidebar_content: sidebar_content,
+  has_sidebar: has_sidebar
+} %}
   {% block sidebar_block %}
     {{ drupal_entity('block', block_name, check_access=false) }}
     {{ content.field_sidebar_content }}
