--- a/src/scss/components/content/_service.scss
+++ b/src/scss/components/content/_service.scss
@@ -252,6 +252,6 @@ $teaser-icon-size-desktop: 48px;
 }
 
 // Add extra margin to service long description if table of contents is enabled.
-.table-of-contents__container + .service__long-desc {
+.table-of-contents + .service__long-desc {
   @include component-margin-top();
 }
