--- a/templates/field/field--toc-enabled.html.twig
+++ b/templates/field/field--toc-enabled.html.twig
@@ -4,7 +4,7 @@
       {% if toc_title|render %}
         <h2 class="table-of-contents__title">{{ toc_title }}</h2>
       {% endif %}
-      <nav id="helfi-toc-table-of-contents-list" role="navigation" class="table-of-contents__content">
+      <nav id="helfi-toc-table-of-contents-list" class="table-of-contents__content">
         <ul class="table-of-contents__list">
           <li class="js-remove table-of-contents__item">{{ 'Loading table of contents'|t }}</li>
         </ul>
