--- a/src/scss/components/content/_cookie-compliance.scss
+++ b/src/scss/components/content/_cookie-compliance.scss
@@ -87,18 +87,25 @@
 
 .embedded-content-cookie-compliance {
   align-content: center;
+  align-items: center;
   background-color: $color-black-5;
   display: flex;
-  flex-direction: row;
   justify-content: center;
+
+  .map &,
+  .remote-video & {
+    aspect-ratio: 16 / 9; // Best guess for content size
+  }
 
   .message {
     background-color: $color-white;
     margin: $spacing;
+    max-width: $spacing + $content-width-max + $spacing; // paragraphs inside will max-width: content-widh-max
     padding: $spacing;
 
     @include breakpoint($breakpoint-m) {
       margin: $spacing-quadruple;
+      max-width: $spacing-double + $content-width-max + $spacing-double; // paragraphs inside will max-width: content-widh-max
       padding: $spacing-double;
     }
 
