UHF-2697: Fix hero margin-bottom when there is sidebar

--- a/src/scss/components/paragraphs/_hero.scss
+++ b/src/scss/components/paragraphs/_hero.scss
@@ -3,6 +3,10 @@ $koro-height: 50px;
 .hero {
   color: $body-bg-color;
 
+  .has-sidebar & {
+    margin-bottom: $spacing-sextuple;
+  }
+
   .hero__container {
     color: $color-black-90;
     padding-bottom: $spacing-triple;
