--- a/src/scss/layout/_layout-main-wrapper.scss
+++ b/src/scss/layout/_layout-main-wrapper.scss
@@ -12,6 +12,10 @@
 
   @include breakpoint($breakpoint-m) {
     scroll-margin-top: 0; // No fixed elements on desktop.
+
+    .toolbar-horizontal & {
+      scroll-margin-top: $spacing-quadruple;
+    }
   }
 }
 
