--- a/templates/block/block--main-navigation-level-2.html.twig
+++ b/templates/block/block--main-navigation-level-2.html.twig
@@ -31,12 +31,18 @@
  * http://www.w3.org/TR/WCAG-TECHS/H42.html for more information.
  */
 #}
+{% if menu_link_parent.title and menu_link_parent.url %}
+  {% set link_title = menu_link_parent.title %}
+  {% set link_url = menu_link_parent.url %}
+{% else %}
+  {% set link_title = 'Home'|t %}
+  {% set link_url = 'internal:/' ~ path('<front>') %}
+{% endif %}
+
 {% set heading_id = attributes.id ~ '-menu'|clean_id %}
 <nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby') }} class="sidebar-navigation">
   <h3{{ title_attributes.setAttribute('id', heading_id) }} class="sidebar-navigation__title">
-    {% if menu_link_parent.title and menu_link_parent.url %}
-      {{ link(menu_link_parent.title, menu_link_parent.url) }}
-    {% endif %}
+    {{ link(link_title, link_url) }}
   </h3>
 
   {# Menu. #}
