--- a/src/scss/components/navigation/_table-of-contents.scss
+++ b/src/scss/components/navigation/_table-of-contents.scss
@@ -25,8 +25,8 @@
   @include component-margin-top();
   background-color: $hdbt-color-white;
   border-left: 8px solid var(--hdbt-color-gold--primary);
-  // Max-width: Content max width (860px) + left and right paddings + border width.
-  max-width: $content-width-max + $spacing-triple + 8px;
+  // Max-width: Content max width (860px) + left and right paddings.
+  max-width: $spacing-and-half + $content-width-max + $spacing-and-half;
   padding: $spacing-double $spacing-and-half;
 }
 
