UHF-1735: Added TODO for the link styles.

--- a/src/scss/components/navigation/_table-of-contents.scss
+++ b/src/scss/components/navigation/_table-of-contents.scss
@@ -74,6 +74,8 @@
     @include font-size(20px, 28px);
   }
 
+  // TODO Unify focuses/hovers and other link styles once UHF-643 is being
+  // developed. https://helsinkisolutionoffice.atlassian.net/browse/UHF-643
   &:focus {
     outline: none;
 
