--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -5,7 +5,7 @@
  */
 #}
 
-{% if page.sidebar_first|render|striptags|trim is not empty %}
+{% if page_has_sidebar %}
   {% set sidebar_first_output = TRUE %}
 {% endif %}
 
@@ -24,7 +24,6 @@
     has_sidebar ? 'has-sidebar' : 'no-sidebar',
     sidebar_first_output ? 'has-sidebar--first',
     sidebar_second_output ? 'has-sidebar--second',
-
   ]
 %}
 
