UHF-2755: Add aria-haspopup to menu dropdowns for accessibility

--- a/templates/navigation/menu--main--desktop.html.twig
+++ b/templates/navigation/menu--main--desktop.html.twig
@@ -74,7 +74,13 @@
           {% endif %}
 
           {% if item.is_collapsed or item.is_expanded %}
-            <button type="button" aria-expanded="true" aria-controls="menu--level-{{ menu_level + 1 }}" class="menu__toggle-button" aria-labelledby="{{ link_id }}">
+            <button
+              type="button"
+              aria-expanded="true"
+              aria-controls="menu--level-{{ menu_level + 1 }}"
+              aria-labelledby="{{ link_id }}"
+              aria-haspopup="true"
+              class="menu__toggle-button">
               {% include '@hdbt/misc/icon.twig' with {icon: 'angle-down', icons_path: icons_path} %}
             </button>
           {% endif %}
