--- a/src/scss/components/navigation/_sidebar-menu.scss
+++ b/src/scss/components/navigation/_sidebar-menu.scss
@@ -111,7 +111,7 @@
         text-decoration: none;
         width: 100%;
 
-        &.is-active {
+        &[aria-current="page"] {
           font-weight: 700;
         }
 
@@ -175,7 +175,7 @@
           position: relative;
           width: 100%;
 
-          &.is-active::before {
+          &[aria-current="page"]::before {
             background-color: $color-black;
             content: "";
             height: 100%; // Line-height
