UHF-2755: Allow scrolling of cookie compliance banner on small screens

--- a/src/scss/components/misc/_eu-cookie-compliance-banner.scss
+++ b/src/scss/components/misc/_eu-cookie-compliance-banner.scss
@@ -13,6 +13,8 @@
 .eu-cookie-compliance-banner {
   background-color: $color-bus;
   color: $color-white;
+  max-height: 100vh;
+  overflow: auto;
   padding: 0 0 $spacing-and-half;
 
   @include breakpoint($breakpoint-m) {
